<resources>
    <string name="app_name">DialogsInAndroidDemo</string>
    <string name="title_delete">Delete</string>
    <string name="title_save">Save</string>
    <string name="deleted_message">Deleted Successfully</string>
    <string name="confirmation_message_delete">Want to delete this?</string>
    <string name="confirmation_message_save">Want to save this?</string>
    <string name="saved_message">Saved Successfully</string>
    <string name="canceled_message">Canceled</string>
    <string name="dialog_progress">Loading Progress</string>
    <string name="select_your_hobby">Select your hobby</string>
    <string name="logout">Logout</string>
    <string name="select_your_skills">Select Your Skills</string>
    <string name="loading">Loading...</string>
    <string name="select_your_birthday">Select Your Birthday</string>
    <string name="login_success">Logged in successfully</string>
    <string name="invalid_cred">Invalid Credentials</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="show_login">Show Login</string>
    <string name="time_picker">Time Picker</string>
    <string name="select_event_time">Select Event Time</string>
</resources>