<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:padding="@dimen/_10dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_text_email"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/_15dp"
        android:elevation="@dimen/_10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/_15dp"
        android:paddingTop="@dimen/_5dp"
        android:paddingBottom="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_text_password"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="@dimen/_15dp"
        android:elevation="@dimen/_10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_15dp"
        android:paddingTop="@dimen/_5dp"
        android:paddingBottom="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_login_button"
        android:elevation="@dimen/_10dp"
        android:text="@string/login"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_text_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_login_button"
        android:elevation="@dimen/_10dp"
        android:text="@string/back"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_text_password" />

</androidx.constraintlayout.widget.ConstraintLayout>



